k8s-specifications/Ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - gaming1.gwy2.org
    secretName: gaming1-tls
  rules:
  - host: gaming1.gwy2.org
    http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 8080
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 8081
